force-app/main/default/objects/Lilly_Journal__c/Lilly_Journal__c.object-meta.xml
<CustomObject>
    <label>Journal Editorial Board Membership</label>
    <nameField>
        <label>Journal  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Editorial Board Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>