force-app/main/default/objects/Lilly_Journal__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Editorial Board Memberships</relationshipLabel>
    <relationshipName>Journal_Editorial_Board_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>