force-app/main/default/objects/Lilly_Journal__c/fields/Lilly_Actual_Role__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Actual_Role__c</fullName>
    <label>Actual Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Editorial Board Member</fullName>
            </value>
            <value>
                <fullName>Associate Editor</fullName>
            </value>
            <value>
                <fullName>Editor-in-chief</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Deputy Editor</fullName>
            </value>
            <value>
                <fullName>Editorial Advisor</fullName>
            </value>
            <value>
                <fullName>President, Board of Directors</fullName>
            </value>
            <value>
                <fullName>Review Editor</fullName>
            </value>
            <value>
                <fullName>Section Editor</fullName>
            </value>
            <value>
                <fullName>Senior Editor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>