force-app/main/default/objects/Lilly_Journal__c/fields/Lilly_Applied_Lowest_IF__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Applied_Lowest_IF__c</fullName>
    <label>Applied Lowest IF</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>