force-app/main/default/objects/Lilly_Journal__c/fields/Lilly_Impact_Factor__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Impact_Factor__c</fullName>
    <label>Impact Factor</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>