force-app/main/default/objects/Lilly_Journal__c/fields/Lilly_Source__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Source__c</fullName>
    <label>Source</label>
    <type>Url</type>
</CustomField>